--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -6,11 +6,94 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <script src="https://cdn.tailwindcss.com"></script>
+    {% block app_script %}{% endblock %}
   </head>
   <!-- ........ -->
-  <body>
-    <h1 class="px-6 py-6 text-2xl">First page</h1>
-    {% block content %} {% endblock %}
+  <body class="bg-neutral-100 text-neutral-900">
+    <nav class="z-30 fixed top-0 left-0 w-full py-3 px-5 flex justify-between items-center flex-wrap text-neutral-100 bg-neutral-900 max-sm:pb-5 max-sm:px-2 max-sm:flex-col max-sm:gap-y-6">
+      <h1><a href="/" class="text-3xl font-semibold [text-shadow:0px_3px_0px_#737373]">Maket</a></h1>
+      <div class="flex items-center justify-center flex-wrap gap-6 gap-x-8">
+
+        {% if 'new-item' in request.path %}
+          <a href="{% url 'item:newItem' %}" class="relative top-1 font-semibold py-2 text-neutral-300 max-sm:py-1 border-b-4 border-blue-800"><i class="fa-solid fa-circle-plus"></i> New Item</a>
+        {% else %}
+          <a href="{% url 'item:newItem' %}" class="font-semibold py-2 hover:text-neutral-300 max-sm:py-1"><i class="fa-solid fa-circle-plus"></i> New Item</a>
+        {% endif %}
+
+        {% if 'browse' in request.path %}
+          <a href="{% url 'item:browse' %}" class="relative top-1 font-semibold py-2 text-neutral-300 max-sm:py-1 border-b-4 border-blue-800"><i class="fa-solid fa-magnifying-glass"></i> Browse</a>
+        {% else %}
+          <a href="{% url 'item:browse' %}" class="font-semibold py-2 hover:text-neutral-300 max-sm:py-1"><i class="fa-solid fa-magnifying-glass"></i> Browse</a>
+        {% endif %}
+
+        <!-- Check authentication -->
+        {% if request.user.is_authenticated %}
+          <!--  -->
+          {% if 'inbox' in request.path %}
+            <a href="{% url 'converse:inbox' %}" class="relative top-1 font-semibold px-4 py-2 text-neutral-300 max-sm:px-2 max-sm:py-1 border-b-4 border-blue-800"><i class="fa-solid fa-envelope"></i> Inbox</a>
+          {% else %}
+            <a href="{% url 'converse:inbox' %}" class="font-semibold px-4 py-2 bg-blue-500 text-blue-100 rounded hover:bg-blue-500/90 max-sm:px-2 max-sm:py-1 border-b-4 border-blue-800"><i class="fa-solid fa-envelope"></i> Inbox</a>
+          {% endif %}
+
+          {% if 'dashboard' in request.path %}
+            <a href="{% url 'dashboard:index' %}" class="relative top-1 font-semibold px-4 py-2 text-neutral-300 max-sm:px-3 max-sm:py-1 border-b-4 border-blue-800"><i class="fa-solid fa-circle-user"></i> Dashboard</a>
+          {% else %}
+            <a href="{% url 'dashboard:index' %}" class="font-semibold px-4 py-2 bg-neutral-600 rounded hover:bg-neutral-600/90 max-sm:px-3 max-sm:py-1 border-b-4 border-neutral-500"><i class="fa-solid fa-circle-user"></i> Dashboard</a>
+          {% endif %}
+          <!--  -->
+        {% else %}
+          <!--  -->
+          {% if 'signup' in request.path %}
+            <a href="{% url 'core:signup' %}" class="relative top-1 font-semibold px-4 py-2 text-neutral-300 max-sm:px-2 max-sm:py-1 border-b-4 border-blue-800"><i class="fa-solid fa-user-plus"></i> Sign up</a>
+          {% else %}
+            <a href="{% url 'core:signup' %}" class="font-semibold px-4 py-2 bg-blue-500 text-blue-100 rounded hover:bg-blue-500/90 max-sm:px-2 max-sm:py-1 border-b-4 border-blue-800"><i class="fa-solid fa-user-plus"></i> Sign up</a>
+          {% endif %}
+
+          {% if 'login' in request.path %}
+            <a href="{% url 'core:login' %}" class="relative top-1 font-semibold px-4 py-2 text-neutral-300 max-sm:px-3 max-sm:py-1 border-b-4 border-blue-800"><i class="fa-solid fa-right-to-bracket"></i> Log in</a>
+          {% else %}
+            <a href="{% url 'core:login' %}" class="font-semibold px-4 py-2 bg-neutral-600 rounded hover:bg-neutral-600/90 max-sm:px-3 max-sm:py-1 border-b-4 border-neutral-500"><i class="fa-solid fa-right-to-bracket"></i> Log in</a>
+          {% endif %}
+          <!--  -->
+        {% endif %}
+      </div>
+    </nav>
+
+    <!-- difer contents go here -->
+    <main class="mt-16 py-4 px-4 max-sm:px-2 max-sm:py-2 max-sm:mt-32 {% if request.user.is_authenticated %}max-[494px]:mt-48{% else %}max-[456px]:mt-48{% endif %}">
+      {% block content %} {% endblock %}
+    </main>
+
+    <footer class="w-full px-2 py-2 text-neutral-100 bg-neutral-900">
+      <div class="flex items-center justify-center flex-wrap">
+        <div class="w-[60%] px-2 pl-5 py-2 border-r-2 border-neutral-800 max-md:w-[50%] max-sm:w-[100%] max-sm:border-r-0 max-sm:border-b-2 max-sm:pl-2 max-sm:pb-5 max-sm:flex max-sm:flex-col max-sm:items-center max-sm:justify-center">
+          <p class="mb-3 font-semibold text-neutral-400">About</p>
+          <p class="text-neutral-500 max-sm:text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure odit perspiciatis suscipit architecto assumenda, reprehenderit sunt, distinctio et vitae aliquam necessitatibus, voluptas culpa asperiores hic error cumque veritatis temporaa.</p>
+        </div>
+
+        <div class="w-[40%] text-blue-400 px-2 pl-5 py-2 max-md:w-[50%] max-sm:w-[100%] max-sm:pl-2 max-sm:pb-5 max-sm:flex max-sm:flex-col max-sm:items-center max-sm:justify-center">
+          <p class="mb-3 font-semibold text-neutral-400">Menu</p>
+          <div class="flex flex-wrap gap-x-8 gap-y-3 md:gap-x-10 max-sm:justify-center">
+            <a href="" class="hover:underline hover:decoration-2 hover:decoration-blue-400 text-center">About</a>
+            <a href="{% url 'core:contact' %}" class="hover:underline hover:decoration-2 hover:decoration-blue-400 text-center">Contact</a>
+            <a href="" class="hover:underline hover:decoration-2 hover:decoration-blue-400 text-center">Privacy policy</a>
+            <a href="" class="hover:underline hover:decoration-2 hover:decoration-blue-400 text-center">Terms of use</a>
+          </div>
+        </div>
+      </div>
+
+      <p class="text-neutral-600 flex items-center">&copy; 2024 Maket Online Marketplace.</p>
+    </footer>
+
+    <!-- notification -->
+    {% block notify %}
+    {% endblock %}
+
+    <!-- bottom script -->
+    {% block bottom_app_script %}
+    {% endblock %}
   </body>
 </html>
