--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -8,5 +8,70 @@
 
 <!-- content block -->
 {% block content %}
-  <p class="text-4xl">Extending base file</p>
+  <div>
+    <p class="text-xs">
+    <span class="font-bold text-sm">Note: Images used here are from pexels and unsplash websites. Plus the users are not real. This guy is real though <a href="{% url 'dashboard:other_user_profile' 'enoch_items' %}" class="text-blue-600">enoch_items</a> that's me ✌🏽</span>
+    </p>
+    <section class="w-[100%] py-2 min-h-[500px] text-neutral-900 mt-4">
+      <h2 class="flex items-center justify-center mb-5 font-bold text-4xl underline underline-offset-4 decoration-4">Categories</h2>
+      {% for category, category_list in categories.items %}
+        <article class="mb-5">
+          <h3 class="flex items-center text-neutral-700 font-bold py-2 mb-3 text-4xl">{{ category }} ({{ category_list.0 }})</h3>
+          <div class="px-2 flex flex-wrap gap-8 gap-y-12 items-center justify-center">
+            {% for item in category_list.1 %}
+              <div class="grow relative group w-[300px] min-h-[100px] bg-neutral-300 rounded drop-shadow-xl">
+                <a href="{% url 'item:detail' item.id %}">
+                  <img class="rounded-t w-full h-[200px] object-cover" src="{{ item.image.url }}" alt="{{ item.name }}-image" />
+                  <h4 class="px-2 py-2 flex items-center justify-between gap-x-3" title="{{ item.name }}">
+                    <span class="w-[60%] text-2xl font-bold tracking-tight whitespace-nowrap overflow-hidden text-ellipsis">{{ item.name }}</span>
+                    <span class="italic text-sm">{{ item.stock }} {% if item.stock == 1 %}item{% else %}items{% endif %} in stock</span>
+                  </h4>
+                  <p class="px-4 py-1 bg-blue-900 text-neutral-200 rounded-b rounded-t-2xl font-bold group-hover:bg-blue-700 border-t-4 border-blue-600 transition-all">
+                    <span>Price:</span>
+                    <span>${{ item.price }}</span>
+                  </p>
+                </a>
+                <!-- seller -->
+                <a href="{% url 'dashboard:other_user_profile' item.created_by %}" class="absolute top-2 left-2 rounded-md font-semibold bg-neutral-800/60 text-neutral-100 flex items-center justify-center gap-x-2 px-2 py-1 text-sm hover:bg-neutral-800">
+                  <span>⭐</span>
+                  <span>BY: 
+                    {% if request.user == item.created_by %}
+                      You
+                    {% else %}
+                      {{ item.created_by }}
+                    {% endif %}
+                  </span>
+                  <span>⭐</span>
+                </a>
+              </div>
+            {% endfor %}
+
+            {% if not category_list.1 %}
+              <p class="flex flex-col gap-y-4 justify-center items-center my-10">
+                <span class="text-3xl font-semibold text-center px-2">Be the first to start selling <span class="text-neutral-500">{{ category }}</span> on Maket today</span>
+                {% if request.user.is_authenticated %}
+                  <a href="{% url 'item:newItem' %}" class="bg-blue-500 flex items-center justify-center px-4 py-4 rounded text-center text-neutral-100 font-semibold hover:bg-blue-500/90">Create new item</a>
+                {% else %}
+                  <a href="{% url 'core:login' %}" class="bg-blue-500 flex items-center justify-center px-4 py-4 rounded text-center text-neutral-100 font-semibold hover:bg-blue-500/90">Log in to create</a>
+                {% endif %}
+              </p>
+            {% endif %}
+          </div>
+        </article>
+        <!-- sign up to view more info -->
+        <div class="mb-14 text-center flex item-center justify-end">
+          {% if category_list.0 > 2 %}
+            {% if request.user.is_authenticated %}
+              <a href="{% url 'core:category' category_list.2 %}" class="px-2 py-1 whitespace-nowrap rounded bg-blue-500 text-neutral-100 font-semibold hover:bg-blue-500/80">See more items</a>
+            {% else %}
+              <p>
+                <span class="italic text-sm text-orange-600 inline-block py-1 pb-2">Log in or create an account to see more items in this category</span>
+                <a href="{% url 'core:login' %}" class="px-2 py-1 whitespace-nowrap rounded bg-blue-500 text-neutral-100 font-semibold hover:bg-blue-500/80">Log in</a>
+              </p>
+            {% endif %}
+          {% endif %}
+        </div>
+      {% endfor %}
+    </section>
+  </div>
 {% endblock %}
