fix: for internal server error 500 on vercel, whenever I try to login

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -13,7 +13,7 @@
   </head>
   <!-- ........ -->
   <body class="bg-neutral-100 text-neutral-900">
-    <nav class="z-30 fixed top-0 left-0 w-full py-3 px-5 flex justify-between items-center flex-wrap text-neutral-100 bg-neutral-900 max-sm:pb-5 max-sm:px-2 max-sm:flex-col max-sm:gap-y-6">
+    <nav class="z-30 fixed top-0 left-0 w-full py-3 px-5 flex justify-between items-center flex-wrap text-neutral-100 bg-neutral-900 max-md:relative max-sm:pb-5 max-sm:px-2 max-sm:flex-col max-sm:gap-y-6">
       <h1><a href="/" class="text-3xl font-semibold [text-shadow:0px_3px_0px_#737373]">Maket</a></h1>
       <div class="flex items-center justify-center flex-wrap gap-6 gap-x-8">
 
@@ -63,7 +63,7 @@
     </nav>
 
     <!-- difer contents go here -->
-    <main class="mt-16 py-4 px-4 max-sm:px-2 max-sm:py-2 max-sm:mt-32 {% if request.user.is_authenticated %}max-[494px]:mt-48{% else %}max-[456px]:mt-48{% endif %}">
+    <main class="mt-16 py-4 px-4 max-sm:px-2 max-sm:py-2 max-md:mt-2">
       {% block content %} {% endblock %}
     </main>
 
